js/src/jit-test/tests/binast/invalid/identifier-null.dir
// |jit-test| error: Empty string